--- a/wp-content/themes/exampleTuto/style.css
+++ b/wp-content/themes/exampleTuto/style.css
@@ -96,8 +96,9 @@ article.post:last-of-type {
 }
 
 .Header-image{
-  border: 5px solid white;
+  border: 5px solid #006EC3;
   border-radius: 50%;
+  margin-top: 5px;
 }
 
 .Header-name{
@@ -112,6 +113,7 @@ article.post:last-of-type {
   font-size: 2.2em;
   font-weight: bold;
   text-decoration: none;
+  margin-top: 5px;
 }
 
 
